--- a/src/main/webapp/WEB-INF/view/common.jspf
+++ b/src/main/webapp/WEB-INF/view/common.jspf
@@ -20,6 +20,7 @@
 <c:url var="angular_animate"			value="/angular-animate/angular-animate.js"/>
 <c:url var="angular_touch"				value="/angular-touch/angular-touch.js"/>
 <c:url var="angular_loading_bar"		value="/angular-loading-bar/build/loading-bar.js"/>
+<c:url var="ngmap"						value="/ngmap/build/scripts/ng-map.js"/>
 
 <script type="text/javascript" src="${jquery}"></script>
 <script type="text/javascript" src="${bootstrap_js}"></script>
@@ -29,3 +30,4 @@
 <script type="text/javascript" src="${angular_animate}"></script>
 <script type="text/javascript" src="${angular_touch}"></script>
 <script type="text/javascript" src="${angular_loading_bar}"></script>
+<script type="text/javascript" src="${ngmap}"></script>
